# self-review

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/self_review/: __init__.py  db.py  git.py  github.py  main.py  review.py  slack.py
tests/: test_db.py
